// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Terminal formatter snapshots renders Claude healthy 1`] = `
"\x1B[38;2;209;154;102m┏━\x1B[0m \x1B[38;2;209;154;102m\x1B[1mClaude\x1B[0m \x1B[38;2;209;154;102m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\x1B[0m
\x1B[38;2;209;154;102m┃\x1B[0m
\x1B[38;2;209;154;102m┣━\x1B[0m \x1B[38;2;198;120;221m\x1B[1m◆ 5-hour limit (shared)\x1B[0m
\x1B[38;2;209;154;102m┃\x1B[0m  \x1B[38;2;152;195;121m●\x1B[0m \x1B[38;2;226;232;240mAll Models          \x1B[0m \x1B[38;2;152;195;121m███████████████\x1B[38;2;106;116;133m░░░░░\x1B[0m \x1B[38;2;152;195;121m 75%\x1B[0m \x1B[38;2;86;182;194m→ 0m (__:__)\x1B[0m
\x1B[38;2;209;154;102m┃\x1B[0m
\x1B[38;2;209;154;102m┣━\x1B[0m \x1B[38;2;198;120;221m\x1B[1m◆ Weekly limit (shared)\x1B[0m
\x1B[38;2;209;154;102m┃\x1B[0m  \x1B[38;2;152;195;121m●\x1B[0m \x1B[38;2;226;232;240mAll Models          \x1B[0m \x1B[38;2;152;195;121m██████████████████\x1B[38;2;106;116;133m░░\x1B[0m \x1B[38;2;152;195;121m 90%\x1B[0m \x1B[38;2;86;182;194m→ 0m (__:__)\x1B[0m
\x1B[38;2;209;154;102m┃\x1B[0m
\x1B[38;2;209;154;102m┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\x1B[0m"
`;

exports[`Terminal formatter snapshots renders Claude error 1`] = `
"\x1B[38;2;209;154;102m┏━\x1B[0m \x1B[38;2;209;154;102m\x1B[1mClaude\x1B[0m \x1B[38;2;209;154;102m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\x1B[0m
\x1B[38;2;209;154;102m┃\x1B[0m
\x1B[38;2;209;154;102m┃\x1B[0m  \x1B[38;2;224;108;117m⚠️ Token expired. Open \`agent-bar-omarchy menu\` and choose Provider login.\x1B[0m
\x1B[38;2;209;154;102m┃\x1B[0m
\x1B[38;2;209;154;102m┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\x1B[0m"
`;

exports[`Terminal formatter snapshots renders Codex healthy 1`] = `
"\x1B[38;2;152;195;121m┏━\x1B[0m \x1B[38;2;152;195;121m\x1B[1mCodex\x1B[0m \x1B[38;2;152;195;121m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\x1B[0m
\x1B[38;2;152;195;121m┃\x1B[0m
\x1B[38;2;152;195;121m┃\x1B[0m  \x1B[38;2;151;161;174mPlan: Pro\x1B[0m
\x1B[38;2;152;195;121m┃\x1B[0m
\x1B[38;2;152;195;121m┣━\x1B[0m \x1B[38;2;198;120;221m\x1B[1m◆ 5-hour limit\x1B[0m
\x1B[38;2;152;195;121m┃\x1B[0m  \x1B[38;2;152;195;121m●\x1B[0m \x1B[38;2;226;232;240mCodex               \x1B[0m \x1B[38;2;152;195;121m████████████\x1B[38;2;106;116;133m░░░░░░░░\x1B[0m \x1B[38;2;152;195;121m 60%\x1B[0m \x1B[38;2;86;182;194m→ 0m (__:__)\x1B[0m
\x1B[38;2;152;195;121m┃\x1B[0m
\x1B[38;2;152;195;121m┣━\x1B[0m \x1B[38;2;198;120;221m\x1B[1m◆ 7-day limit\x1B[0m
\x1B[38;2;152;195;121m┃\x1B[0m  \x1B[38;2;152;195;121m●\x1B[0m \x1B[38;2;226;232;240mCodex               \x1B[0m \x1B[38;2;152;195;121m█████████████████\x1B[38;2;106;116;133m░░░\x1B[0m \x1B[38;2;152;195;121m 85%\x1B[0m \x1B[38;2;86;182;194m→ 0m (__:__)\x1B[0m
\x1B[38;2;152;195;121m┃\x1B[0m
\x1B[38;2;152;195;121m┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\x1B[0m"
`;

exports[`Terminal formatter snapshots renders Codex error 1`] = `
"\x1B[38;2;152;195;121m┏━\x1B[0m \x1B[38;2;152;195;121m\x1B[1mCodex\x1B[0m \x1B[38;2;152;195;121m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\x1B[0m
\x1B[38;2;152;195;121m┃\x1B[0m
\x1B[38;2;152;195;121m┃\x1B[0m  \x1B[38;2;224;108;117m⚠️ No session data found\x1B[0m
\x1B[38;2;152;195;121m┃\x1B[0m
\x1B[38;2;152;195;121m┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\x1B[0m"
`;

exports[`Terminal formatter snapshots renders Amp healthy 1`] = `
"\x1B[38;2;198;120;221m┏━\x1B[0m \x1B[38;2;198;120;221m\x1B[1mAmp\x1B[0m \x1B[38;2;198;120;221m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\x1B[0m
\x1B[38;2;198;120;221m┃\x1B[0m
\x1B[38;2;198;120;221m┣━\x1B[0m \x1B[38;2;198;120;221m\x1B[1m◆ Free Tier\x1B[0m
\x1B[38;2;198;120;221m┃\x1B[0m  \x1B[38;2;152;195;121m●\x1B[0m \x1B[38;2;152;195;121m██████████████\x1B[38;2;106;116;133m░░░░░░\x1B[0m \x1B[38;2;152;195;121m 70%\x1B[0m
\x1B[38;2;198;120;221m┃\x1B[0m  \x1B[38;2;106;116;133m├─\x1B[0m \x1B[38;2;86;182;194m+$0.25/hr\x1B[0m  \x1B[38;2;192;201;212m( $3.50 / $5.00 )\x1B[0m
\x1B[38;2;198;120;221m┃\x1B[0m  \x1B[38;2;106;116;133m└─\x1B[0m \x1B[38;2;86;182;194mFull in 0m  (__:__)\x1B[0m
\x1B[38;2;198;120;221m┃\x1B[0m
\x1B[38;2;198;120;221m┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\x1B[0m"
`;

exports[`Terminal formatter snapshots renders Amp error 1`] = `
"\x1B[38;2;198;120;221m┏━\x1B[0m \x1B[38;2;198;120;221m\x1B[1mAmp\x1B[0m \x1B[38;2;198;120;221m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\x1B[0m
\x1B[38;2;198;120;221m┃\x1B[0m
\x1B[38;2;198;120;221m┃\x1B[0m  \x1B[38;2;224;108;117m⚠️ Amp CLI not installed. Right-click to install and log in.\x1B[0m
\x1B[38;2;198;120;221m┃\x1B[0m
\x1B[38;2;198;120;221m┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\x1B[0m"
`;

exports[`Terminal formatter snapshots renders all providers combined 1`] = `
"\x1B[38;2;209;154;102m┏━\x1B[0m \x1B[38;2;209;154;102m\x1B[1mClaude\x1B[0m \x1B[38;2;209;154;102m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\x1B[0m
\x1B[38;2;209;154;102m┃\x1B[0m
\x1B[38;2;209;154;102m┣━\x1B[0m \x1B[38;2;198;120;221m\x1B[1m◆ 5-hour limit (shared)\x1B[0m
\x1B[38;2;209;154;102m┃\x1B[0m  \x1B[38;2;152;195;121m●\x1B[0m \x1B[38;2;226;232;240mAll Models          \x1B[0m \x1B[38;2;152;195;121m███████████████\x1B[38;2;106;116;133m░░░░░\x1B[0m \x1B[38;2;152;195;121m 75%\x1B[0m \x1B[38;2;86;182;194m→ 0m (__:__)\x1B[0m
\x1B[38;2;209;154;102m┃\x1B[0m
\x1B[38;2;209;154;102m┣━\x1B[0m \x1B[38;2;198;120;221m\x1B[1m◆ Weekly limit (shared)\x1B[0m
\x1B[38;2;209;154;102m┃\x1B[0m  \x1B[38;2;152;195;121m●\x1B[0m \x1B[38;2;226;232;240mAll Models          \x1B[0m \x1B[38;2;152;195;121m██████████████████\x1B[38;2;106;116;133m░░\x1B[0m \x1B[38;2;152;195;121m 90%\x1B[0m \x1B[38;2;86;182;194m→ 0m (__:__)\x1B[0m
\x1B[38;2;209;154;102m┃\x1B[0m
\x1B[38;2;209;154;102m┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\x1B[0m

\x1B[38;2;152;195;121m┏━\x1B[0m \x1B[38;2;152;195;121m\x1B[1mCodex\x1B[0m \x1B[38;2;152;195;121m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\x1B[0m
\x1B[38;2;152;195;121m┃\x1B[0m
\x1B[38;2;152;195;121m┃\x1B[0m  \x1B[38;2;151;161;174mPlan: Pro\x1B[0m
\x1B[38;2;152;195;121m┃\x1B[0m
\x1B[38;2;152;195;121m┣━\x1B[0m \x1B[38;2;198;120;221m\x1B[1m◆ 5-hour limit\x1B[0m
\x1B[38;2;152;195;121m┃\x1B[0m  \x1B[38;2;152;195;121m●\x1B[0m \x1B[38;2;226;232;240mCodex               \x1B[0m \x1B[38;2;152;195;121m████████████\x1B[38;2;106;116;133m░░░░░░░░\x1B[0m \x1B[38;2;152;195;121m 60%\x1B[0m \x1B[38;2;86;182;194m→ 0m (__:__)\x1B[0m
\x1B[38;2;152;195;121m┃\x1B[0m
\x1B[38;2;152;195;121m┣━\x1B[0m \x1B[38;2;198;120;221m\x1B[1m◆ 7-day limit\x1B[0m
\x1B[38;2;152;195;121m┃\x1B[0m  \x1B[38;2;152;195;121m●\x1B[0m \x1B[38;2;226;232;240mCodex               \x1B[0m \x1B[38;2;152;195;121m█████████████████\x1B[38;2;106;116;133m░░░\x1B[0m \x1B[38;2;152;195;121m 85%\x1B[0m \x1B[38;2;86;182;194m→ 0m (__:__)\x1B[0m
\x1B[38;2;152;195;121m┃\x1B[0m
\x1B[38;2;152;195;121m┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\x1B[0m

\x1B[38;2;198;120;221m┏━\x1B[0m \x1B[38;2;198;120;221m\x1B[1mAmp\x1B[0m \x1B[38;2;198;120;221m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\x1B[0m
\x1B[38;2;198;120;221m┃\x1B[0m
\x1B[38;2;198;120;221m┣━\x1B[0m \x1B[38;2;198;120;221m\x1B[1m◆ Free Tier\x1B[0m
\x1B[38;2;198;120;221m┃\x1B[0m  \x1B[38;2;152;195;121m●\x1B[0m \x1B[38;2;152;195;121m██████████████\x1B[38;2;106;116;133m░░░░░░\x1B[0m \x1B[38;2;152;195;121m 70%\x1B[0m
\x1B[38;2;198;120;221m┃\x1B[0m  \x1B[38;2;106;116;133m├─\x1B[0m \x1B[38;2;86;182;194m+$0.25/hr\x1B[0m  \x1B[38;2;192;201;212m( $3.50 / $5.00 )\x1B[0m
\x1B[38;2;198;120;221m┃\x1B[0m  \x1B[38;2;106;116;133m└─\x1B[0m \x1B[38;2;86;182;194mFull in 0m  (__:__)\x1B[0m
\x1B[38;2;198;120;221m┃\x1B[0m
\x1B[38;2;198;120;221m┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\x1B[0m"
`;

exports[`Terminal formatter snapshots renders empty providers 1`] = `"\x1B[38;2;106;116;133mNo providers connected\x1B[0m"`;

exports[`Waybar formatter snapshots renders Claude healthy 1`] = `"<span foreground='#98c379'>75%</span>"`;

exports[`Waybar formatter snapshots renders Claude healthy 2`] = `
"<span foreground='#d19a66'>┏━</span> <span foreground='#d19a66' weight='bold'>Claude · Pro</span> <span foreground='#d19a66'>━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</span>
<span foreground='#d19a66'>┃</span>
<span foreground='#d19a66'>┣━</span> <span foreground='#d19a66' weight='bold'>◆ 5-hour limit (shared)</span>
<span foreground='#d19a66'>┃</span>  <span foreground='#98c379'>●</span> <span foreground='#e2e8f0'>All Models          </span> <span foreground='#98c379'>███████████████</span><span foreground='#6a7485'>░░░░░</span> <span foreground='#98c379'> 75%</span> <span foreground='#56b6c2'>→ 0m (__:__)</span>
<span foreground='#d19a66'>┃</span>
<span foreground='#d19a66'>┣━</span> <span foreground='#d19a66' weight='bold'>◆ Weekly limit (shared)</span>
<span foreground='#d19a66'>┃</span>  <span foreground='#98c379'>●</span> <span foreground='#e2e8f0'>All Models          </span> <span foreground='#98c379'>██████████████████</span><span foreground='#6a7485'>░░</span> <span foreground='#98c379'> 90%</span> <span foreground='#56b6c2'>→ 0m (__:__)</span>
<span foreground='#d19a66'>┃</span>
<span foreground='#d19a66'>┗━━━━━━━━━━━━━━━━━━</span><span foreground='#6a7485'> cached · __AGO__ </span><span foreground='#d19a66'>━━━━━━━━━━━━━━━━━━━</span>"
`;

exports[`Waybar formatter snapshots renders Claude healthy 3`] = `"agent-bar-omarchy claude-ok"`;

exports[`Waybar formatter snapshots renders Claude error 1`] = `"<span foreground='#6a7485'>No Providers</span>"`;

exports[`Waybar formatter snapshots renders Claude error 2`] = `
"<span foreground='#d19a66'>┏━</span> <span foreground='#d19a66' weight='bold'>Claude</span> <span foreground='#d19a66'>━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</span>
<span foreground='#d19a66'>┃</span>
<span foreground='#d19a66'>┃</span>  <span foreground='#e06c75'>⚠️ Token expired. Open \`agent-bar-omarchy menu\` and choose Provider login.</span>
<span foreground='#d19a66'>┃</span>
<span foreground='#d19a66'>┗━━━━━━━━━━━━━━━━━━</span><span foreground='#6a7485'> cached · __AGO__ </span><span foreground='#d19a66'>━━━━━━━━━━━━━━━━━━━</span>"
`;

exports[`Waybar formatter snapshots renders Claude error 3`] = `"agent-bar-omarchy"`;

exports[`Waybar formatter snapshots renders Codex healthy 1`] = `"<span foreground='#98c379'>60%</span>"`;

exports[`Waybar formatter snapshots renders Codex healthy 2`] = `
"<span foreground='#98c379'>┏━</span> <span foreground='#98c379' weight='bold'>Codex · Pro</span> <span foreground='#98c379'>━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</span>
<span foreground='#98c379'>┃</span>
<span foreground='#98c379'>┃</span>
<span foreground='#98c379'>┣━</span> <span foreground='#98c379' weight='bold'>◆ 5-hour limit</span>
<span foreground='#98c379'>┃</span>  <span foreground='#98c379'>●</span> <span foreground='#e2e8f0'>Codex               </span> <span foreground='#98c379'>████████████</span><span foreground='#6a7485'>░░░░░░░░</span> <span foreground='#98c379'> 60%</span> <span foreground='#56b6c2'>→ 0m (__:__)</span>
<span foreground='#98c379'>┃</span>
<span foreground='#98c379'>┣━</span> <span foreground='#98c379' weight='bold'>◆ 7-day limit</span>
<span foreground='#98c379'>┃</span>  <span foreground='#98c379'>●</span> <span foreground='#e2e8f0'>Codex               </span> <span foreground='#98c379'>█████████████████</span><span foreground='#6a7485'>░░░</span> <span foreground='#98c379'> 85%</span> <span foreground='#56b6c2'>→ 0m (__:__)</span>
<span foreground='#98c379'>┃</span>
<span foreground='#98c379'>┗━━━━━━━━━━━━━━━━━━</span><span foreground='#6a7485'> cached · __AGO__ </span><span foreground='#98c379'>━━━━━━━━━━━━━━━━━━━</span>"
`;

exports[`Waybar formatter snapshots renders Codex healthy 3`] = `"agent-bar-omarchy codex-ok"`;

exports[`Waybar formatter snapshots renders Amp healthy 1`] = `"<span foreground='#98c379'>70%</span>"`;

exports[`Waybar formatter snapshots renders Amp healthy 2`] = `
"<span foreground='#c678dd'>┏━</span> <span foreground='#c678dd' weight='bold'>Amp</span> <span foreground='#c678dd'>━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</span>
<span foreground='#c678dd'>┃</span>
<span foreground='#c678dd'>┣━</span> <span foreground='#c678dd' weight='bold'>◆ Free Tier</span>
<span foreground='#c678dd'>┃</span>  <span foreground='#98c379'>●</span> <span foreground='#98c379'>██████████████</span><span foreground='#6a7485'>░░░░░░</span> <span foreground='#98c379'> 70%</span>  <span foreground='#56b6c2'>→ Full in 0m (__:__)</span>
<span foreground='#c678dd'>┃</span>  <span foreground='#6a7485'>○</span> <span foreground='#56b6c2'>+$0.25/hr</span><span foreground='#6a7485'>  |  </span><span foreground='#c0c9d4'>$3.50 / $5.00</span>
<span foreground='#c678dd'>┃</span>
<span foreground='#c678dd'>┗━━━━━━━━━━━━━━━━━━</span><span foreground='#6a7485'> cached · __AGO__ </span><span foreground='#c678dd'>━━━━━━━━━━━━━━━━━━━</span>"
`;

exports[`Waybar formatter snapshots renders Amp healthy 3`] = `"agent-bar-omarchy amp-ok"`;

exports[`Waybar formatter snapshots renders all providers combined 1`] = `"<span foreground='#98c379'>75%</span> <span foreground='#6a7485'>│</span> <span foreground='#98c379'>60%</span> <span foreground='#6a7485'>│</span> <span foreground='#98c379'>70%</span>"`;

exports[`Waybar formatter snapshots renders all providers combined 2`] = `
"<span foreground='#d19a66'>┏━</span> <span foreground='#d19a66' weight='bold'>Claude · Pro</span> <span foreground='#d19a66'>━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</span>
<span foreground='#d19a66'>┃</span>
<span foreground='#d19a66'>┣━</span> <span foreground='#d19a66' weight='bold'>◆ 5-hour limit (shared)</span>
<span foreground='#d19a66'>┃</span>  <span foreground='#98c379'>●</span> <span foreground='#e2e8f0'>All Models          </span> <span foreground='#98c379'>███████████████</span><span foreground='#6a7485'>░░░░░</span> <span foreground='#98c379'> 75%</span> <span foreground='#56b6c2'>→ 0m (__:__)</span>
<span foreground='#d19a66'>┃</span>
<span foreground='#d19a66'>┣━</span> <span foreground='#d19a66' weight='bold'>◆ Weekly limit (shared)</span>
<span foreground='#d19a66'>┃</span>  <span foreground='#98c379'>●</span> <span foreground='#e2e8f0'>All Models          </span> <span foreground='#98c379'>██████████████████</span><span foreground='#6a7485'>░░</span> <span foreground='#98c379'> 90%</span> <span foreground='#56b6c2'>→ 0m (__:__)</span>
<span foreground='#d19a66'>┃</span>
<span foreground='#d19a66'>┗━━━━━━━━━━━━━━━━━━</span><span foreground='#6a7485'> cached · __AGO__ </span><span foreground='#d19a66'>━━━━━━━━━━━━━━━━━━━</span>

<span foreground='#98c379'>┏━</span> <span foreground='#98c379' weight='bold'>Codex · Pro</span> <span foreground='#98c379'>━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</span>
<span foreground='#98c379'>┃</span>
<span foreground='#98c379'>┃</span>
<span foreground='#98c379'>┣━</span> <span foreground='#98c379' weight='bold'>◆ 5-hour limit</span>
<span foreground='#98c379'>┃</span>  <span foreground='#98c379'>●</span> <span foreground='#e2e8f0'>Codex               </span> <span foreground='#98c379'>████████████</span><span foreground='#6a7485'>░░░░░░░░</span> <span foreground='#98c379'> 60%</span> <span foreground='#56b6c2'>→ 0m (__:__)</span>
<span foreground='#98c379'>┃</span>
<span foreground='#98c379'>┣━</span> <span foreground='#98c379' weight='bold'>◆ 7-day limit</span>
<span foreground='#98c379'>┃</span>  <span foreground='#98c379'>●</span> <span foreground='#e2e8f0'>Codex               </span> <span foreground='#98c379'>█████████████████</span><span foreground='#6a7485'>░░░</span> <span foreground='#98c379'> 85%</span> <span foreground='#56b6c2'>→ 0m (__:__)</span>
<span foreground='#98c379'>┃</span>
<span foreground='#98c379'>┗━━━━━━━━━━━━━━━━━━</span><span foreground='#6a7485'> cached · __AGO__ </span><span foreground='#98c379'>━━━━━━━━━━━━━━━━━━━</span>

<span foreground='#c678dd'>┏━</span> <span foreground='#c678dd' weight='bold'>Amp</span> <span foreground='#c678dd'>━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</span>
<span foreground='#c678dd'>┃</span>
<span foreground='#c678dd'>┣━</span> <span foreground='#c678dd' weight='bold'>◆ Free Tier</span>
<span foreground='#c678dd'>┃</span>  <span foreground='#98c379'>●</span> <span foreground='#98c379'>██████████████</span><span foreground='#6a7485'>░░░░░░</span> <span foreground='#98c379'> 70%</span>  <span foreground='#56b6c2'>→ Full in 0m (__:__)</span>
<span foreground='#c678dd'>┃</span>  <span foreground='#6a7485'>○</span> <span foreground='#56b6c2'>+$0.25/hr</span><span foreground='#6a7485'>  |  </span><span foreground='#c0c9d4'>$3.50 / $5.00</span>
<span foreground='#c678dd'>┃</span>
<span foreground='#c678dd'>┗━━━━━━━━━━━━━━━━━━</span><span foreground='#6a7485'> cached · __AGO__ </span><span foreground='#c678dd'>━━━━━━━━━━━━━━━━━━━</span>"
`;

exports[`Waybar formatter snapshots renders all providers combined 3`] = `"agent-bar-omarchy claude-ok codex-ok amp-ok"`;

exports[`Waybar formatter snapshots renders empty providers 1`] = `"<span foreground='#6a7485'>No Providers</span>"`;

exports[`Waybar formatter snapshots renders empty providers 2`] = `""`;

exports[`Waybar formatter snapshots renders empty providers 3`] = `"agent-bar-omarchy"`;

exports[`formatProviderForWaybar snapshots renders Claude healthy 1`] = `"<span foreground='#98c379'>75%</span>"`;

exports[`formatProviderForWaybar snapshots renders Claude healthy 2`] = `
"<span foreground='#d19a66'>┏━</span> <span foreground='#d19a66' weight='bold'>Claude · Pro</span> <span foreground='#d19a66'>━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</span>
<span foreground='#d19a66'>┃</span>
<span foreground='#d19a66'>┣━</span> <span foreground='#d19a66' weight='bold'>◆ 5-hour limit (shared)</span>
<span foreground='#d19a66'>┃</span>  <span foreground='#98c379'>●</span> <span foreground='#e2e8f0'>All Models          </span> <span foreground='#98c379'>███████████████</span><span foreground='#6a7485'>░░░░░</span> <span foreground='#98c379'> 75%</span> <span foreground='#56b6c2'>→ 0m (__:__)</span>
<span foreground='#d19a66'>┃</span>
<span foreground='#d19a66'>┣━</span> <span foreground='#d19a66' weight='bold'>◆ Weekly limit (shared)</span>
<span foreground='#d19a66'>┃</span>  <span foreground='#98c379'>●</span> <span foreground='#e2e8f0'>All Models          </span> <span foreground='#98c379'>██████████████████</span><span foreground='#6a7485'>░░</span> <span foreground='#98c379'> 90%</span> <span foreground='#56b6c2'>→ 0m (__:__)</span>
<span foreground='#d19a66'>┃</span>
<span foreground='#d19a66'>┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</span>"
`;

exports[`formatProviderForWaybar snapshots renders Claude healthy 3`] = `"agent-bar-omarchy-claude ok"`;

exports[`formatProviderForWaybar snapshots renders Claude disconnected 1`] = `"<span foreground='#e06c75'>󱘖</span>"`;

exports[`formatProviderForWaybar snapshots renders Claude disconnected 2`] = `
"<span foreground='#d19a66'>┏━</span> <span foreground='#d19a66' weight='bold'>Claude</span> <span foreground='#d19a66'>━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</span>
<span foreground='#d19a66'>┃</span>
<span foreground='#d19a66'>┃</span>  <span foreground='#e06c75'>⚠️ Token expired. Open \`agent-bar-omarchy menu\` and choose Provider login.</span>
<span foreground='#d19a66'>┃</span>
<span foreground='#d19a66'>┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</span>"
`;

exports[`formatProviderForWaybar snapshots renders Claude disconnected 3`] = `"agent-bar-omarchy-claude disconnected"`;

exports[`formatProviderForWaybar snapshots renders Codex healthy 1`] = `"<span foreground='#98c379'>60%</span>"`;

exports[`formatProviderForWaybar snapshots renders Codex healthy 2`] = `
"<span foreground='#98c379'>┏━</span> <span foreground='#98c379' weight='bold'>Codex · Pro</span> <span foreground='#98c379'>━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</span>
<span foreground='#98c379'>┃</span>
<span foreground='#98c379'>┃</span>
<span foreground='#98c379'>┣━</span> <span foreground='#98c379' weight='bold'>◆ 5-hour limit</span>
<span foreground='#98c379'>┃</span>  <span foreground='#98c379'>●</span> <span foreground='#e2e8f0'>Codex               </span> <span foreground='#98c379'>████████████</span><span foreground='#6a7485'>░░░░░░░░</span> <span foreground='#98c379'> 60%</span> <span foreground='#56b6c2'>→ 0m (__:__)</span>
<span foreground='#98c379'>┃</span>
<span foreground='#98c379'>┣━</span> <span foreground='#98c379' weight='bold'>◆ 7-day limit</span>
<span foreground='#98c379'>┃</span>  <span foreground='#98c379'>●</span> <span foreground='#e2e8f0'>Codex               </span> <span foreground='#98c379'>█████████████████</span><span foreground='#6a7485'>░░░</span> <span foreground='#98c379'> 85%</span> <span foreground='#56b6c2'>→ 0m (__:__)</span>
<span foreground='#98c379'>┃</span>
<span foreground='#98c379'>┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</span>"
`;

exports[`formatProviderForWaybar snapshots renders Codex healthy 3`] = `"agent-bar-omarchy-codex ok"`;

exports[`formatProviderForWaybar snapshots renders Amp healthy 1`] = `"<span foreground='#98c379'>70%</span>"`;

exports[`formatProviderForWaybar snapshots renders Amp healthy 2`] = `
"<span foreground='#c678dd'>┏━</span> <span foreground='#c678dd' weight='bold'>Amp</span> <span foreground='#c678dd'>━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</span>
<span foreground='#c678dd'>┃</span>
<span foreground='#c678dd'>┣━</span> <span foreground='#c678dd' weight='bold'>◆ Free Tier</span>
<span foreground='#c678dd'>┃</span>  <span foreground='#98c379'>●</span> <span foreground='#98c379'>██████████████</span><span foreground='#6a7485'>░░░░░░</span> <span foreground='#98c379'> 70%</span>  <span foreground='#56b6c2'>→ Full in 0m (__:__)</span>
<span foreground='#c678dd'>┃</span>  <span foreground='#6a7485'>○</span> <span foreground='#56b6c2'>+$0.25/hr</span><span foreground='#6a7485'>  |  </span><span foreground='#c0c9d4'>$3.50 / $5.00</span>
<span foreground='#c678dd'>┃</span>
<span foreground='#c678dd'>┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</span>"
`;

exports[`formatProviderForWaybar snapshots renders Amp healthy 3`] = `"agent-bar-omarchy-amp ok"`;
